--- a/test position.html
+++ b/test position.html
@@ -9,13 +9,8 @@
 </head>
 
 <body>
-    <div class="containerflex">
-        <div class="flexitem">1</div>
-        <div class="flexitem">2</div>
-        <div class="flexitem">3</div>
-        <div class="flexitem">4</div>
-        <div class="flexitem">5</div>
-        <div class="flexitem">6</div>
+    <div class="parent">
+        <div class="child">text</div>
     </div>
 </body>
 
