--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- header design -->
     <header class="header">
-      <a href="#" class="logo">Portfolio.</a>
+      <a href="#" class="logo">Perfect.</a>
 
       <i class="bx bx-menu-alt-left" id="menu-icon"></i>
 
@@ -62,12 +62,20 @@
       <div class="about-centent">
         <h2 class="heading">About <span>Me</span></h2>
         <h3>Fullstack developer</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-          laborum suscipit doloribus voluptate qui. Aut natus officiis cum quod
-          inventore, accusamus perspiciatis adipisci, enim in commodi optio
-          expedita, ratione rerum!
-        </p>
+        <ol>
+          I am a FullStack programmer. I don't know what to say so I'll get
+          straight to the point on the basics of being a FullStack developer:
+          <li>Basic knowledge of programming.</li>
+          <li>Knowledge of programming languages.</li>
+          <li>Database knowledge.</li>
+          <li>Knowledge of frameworks.</li>
+          <li>Frontend development skills.</li>
+          <li>Backend development skills.</li>
+          <li>Teamwork skills.</li>
+          <li>
+            Analytical and problem-solving skills during website development.
+          </li>
+        </ol>
         <a href="#" class="btn">Read More</a>
       </div>
     </section>
@@ -80,7 +88,7 @@
         <div class="services-box">
           <i class="bx bx-code-alt"></i>
           <h3>Web Development</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <p>Html, CSS, Javascript .</p>
           <a href="#" class="btn">Read More</a>
         </div>
 
@@ -198,6 +206,9 @@
 
     <!-- scroll reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- type js -->
+    <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
 
     <script src="js/script.js"></script>
   </body>
