--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -179,7 +180,7 @@
           <input type="email" placeholder="Email Address" />
         </div>
         <div class="input-box">
-          <input type="number" placeholder="Mobile Number" />
+          <input type="text" placeholder="Mobile Number" />
           <input type="text" placeholder="Email Subject" />
         </div>
         <textarea
