--- a/index.html
+++ b/index.html
@@ -15,30 +15,35 @@
             <img src="./assets 2/header.png" />
         </div>
         <div class="navbar">
-            <a class="navbar__link" href="#home">HOME</a>
-            <a class="navbar__link" href="#about">ABOUT</a>
-            <a class="navbar__link" href="#news">NEWS</a>
-            <a class="navbar__link" href="#">CONTACT</a>
+            <div class="navbar__main"><a class="navbar__main--link" href="#">HOME</a></div>
+            <div class="navbar__main"><a class="navbar__main--link" href="#">ABOUT</a></div>
+            <div class="navbar__main"><a class="navbar__main--link" href="#">PRODUCT</a>
+                <ul class="navbar__branch">
+                    <li><a class="navbar__branch--link" href="#">URUS</a></li>
+                    <li><a class="navbar__branch--link" href="#">HURACÁN</a></li>
+                </ul>
+            </div>
+            <div class="navbar__main"><a class="navbar__main--link" href="#">CONTACT</a></div>
         </div>
     </section>
 
     <section id="home">
-        <div>
-            <img src="./assets 2/home-left.png" />
+        <div class="home__img--left">
+            <img src="./assets 2/home__img--left.png" />
         </div>
-        <div>
-            <div>
-                <img src="./assets 2/lamborghini.png" />
+        <div class="home__img--center">
+            <div class="home__img--top">
+                <img src="./assets 2/home__img--top.png" />
             </div>
-            <div class="home__bottom">
-                <img src="./assets 2/home-bottom.png" />
+            <div class="home__img--bottom">
+                <img src="./assets 2/home__img--bottom.png" />
             </div>
             <div class="home__paragraph">
-                LAMBORGHINI URUS ST-X
+                LAMBORGHINI URUS
             </div>
         </div>
-        <div>
-            <img src="./assets 2/home-right.png" />
+        <div class="home__img--right">
+            <img src="./assets 2/home__img--right.png" />
         </div>
     </section>
 
