--- a/test position.html
+++ b/test position.html
@@ -9,8 +9,22 @@
 </head>
 
 <body>
-    <div class="parent">
-        <div class="child">text</div>
+    <div class="container-1">
+        <div class="a">SUCCESS</div>
+        <div class="a">WARNING</div>
+        <div class="a">DANGER</div>
+    </div>
+
+    <div class="container-2">
+        <a class="b" href="#">SUCCESS</a>
+        <a class="b" href="#">WARNING</a>
+        <a class="b" href="#">DANGER</a>
+    </div>
+
+    <div class="container-3">
+        <button class="c">SUCCESS</button>
+        <button class="c">WARNING</button>
+        <button class="c">DANGER</button>
     </div>
 </body>
 
