--- a/MY POROLIO/index.html
+++ b/MY POROLIO/index.html
@@ -75,7 +75,7 @@
         <div class="WORK-CONTENT">
           <div class="CONTENT">
             <div class="YEAR"><i class='bx bxs-calendar'></i>2022-2023</div>
-            <h3>Barista</h3>
+            < 3>Barista</h3>
             <p>Khi mình vừa lên đại học của năm nhất mình đã tìm một công việc part time,
               mình đã xin vào làm phục vụ là công việc đầu để mình tiến bước lên thành một pha chế,
               mình đã phúc vụ trong 2 tháng mình đã lên được học rất nhiều về pha chế các món cà phê
@@ -124,6 +124,41 @@
 
   </div>
 </section>
+
+<section class="contact" id="contact">
+  <h2 class="heading">CONTACT <span>ME!</span></h2>
+  <form action="#">
+    <div class="input-hox">
+      <div class="inpux-field">
+        <input type="text" placeholder="Họ và Tên"required>
+        <spn class="focus"></spn>
+      </div>
+      <div class="inpux-field">
+        <input type="text" placeholder="Nhập Email"required>
+        <spn class="focus"></spn>
+    </div>
+
+    <div class="input-hox">
+      <div class="inpux-field">
+        <input type="number" placeholder="Số Điện Thoại"required>
+        <spn class="focus"></spn>
+      </div>
+      <div class="inpux-field">
+        <input type="text" placeholder="Chủ đề Email"required>
+        <spn class="focus"></spn>
+    </div>
+
+    <div class="textarea-field">
+      <textarea name="" id="" cols="30" rows="10" placeholder="Tin nhắn của bạn"required></textarea>
+      <span class="focus"></span>
+
+      <div class="btn-box btns">
+        <button type="GỬI" class="btn">GỬI</button>
+      </div>
+    </div>
+  </form>
+</section>
+
 
 </body>
 </html>
