--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -1,166 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tất Siêu Thành</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@1&family=Roboto+Mono:wght@100&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,400;1,500&family=Roboto+Mono:wght@100&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,400;1,500&family=Roboto+Mono:wght@100&display=swap"
+      rel="stylesheet"
+    />
 
+    <link rel="stylesheet" href="./css/myPortfolio.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tất Siêu Thành</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@1&family=Roboto+Mono:wght@100&display=swap"
-    rel="stylesheet">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,400;1,500&family=Roboto+Mono:wght@100&display=swap"
-    rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,400;1,500&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="./css/myPortfolio.css" />
-
-</head>
-
-<body>
-  <section id="Wrapper__home">
-    <div class="text--fullname">Tất Siêu Thành</div>
-    <div class="img-home"></div>
-    <ul>
-      <li><a href="#Wrapper__home">
-          <div class="text">Home</div>
-        </a></li>
-      <li><a href="#Wrapper__about">
-          <div class="text">About</div>
-        </a></li>
-      <li><a href="#Wrapper__work">
-          <div class="text">Work</div>
-        </a></li>
-      <li><a href="#Wrapper__active">
-          <div class="text">Active</div>
-        </a></li>
-      <li><a href="#Wrapper__contact">
-          <div class="text">Contact</div>
-        </a></li>
-    </ul>
-    <div class="text--name">I'm</div>
-    <div class="line--name">_____________</div>
-    <div class="box__content--intro">I'm an IoT developer with two years of experience.
-      I'm always looking for and eager to learn from real projects. For me technology is the future.</div>
-    <div class="box--service">My service</div>
-    <div class="box__content--service">
-      R&D solutions for iot projects, programming firmware for hardware devices, designing and drawing electrical
-      circuits, writing Web servers,...
-    </div>
-    <a href="#Skype">
-      <div class="skype"></div>
-    </a>
-    <a href="#Facebook">
-      <div class="facebook"></div>
-    </a>
-    <a href="#Github">
-      <div class="github"></div>
-    </a>
-    <a href="#Viber">
-      <div class="viber"></div>
-    </a>
-    <a href="#Linkedin">
-      <div class="linkedin"></div>
-    </a>
-  </section>
-  <section id="Wrapper__about">
-    <div class="box_about">
-      About me
-    </div>
-    <div class="layer__abour--img">
-    </div>
-        <img src="E:/NesTech/BaiTap/assets/TATSIEUTHANH.jpg" class="about--img">
-    </div>
-    <div class="box__content--about">
-      <h2>Name: Tất Siêu Thành</h2>
-      <h2>Birthday: 20/05/1998</h2>
-      <h2> Bachelor of engineering : Electronics and communication engineering technology</h2>
-      <h2>Experience: 2 Years</h2> 
-    </div>
-    <div class="box__skill">My skills</div>
-    <div class="bar__skill--equipments"></div>
-    <div class="bar__skill--equipment"></div>
-    <div class="bar__skill--programmings"></div>
-    <div class="bar__skill--programming"></div>
-    <div class="bar__skill--Microcontrollers"></div>
-    <div class="bar__skill--Microcontroller"></div>
-    <div class="bar__skill--linuxs"></div>
-    <div class="bar__skill--linux"></div>
-    <div class="bar__skill--protocols"></div>
-    <div class="bar__skill--protocol"></div>
-    <div class="bar__skill--frontends"></div>
-    <div class="bar__skill--frontend"></div>
-    <div class="bar__skill--backends"></div>
-    <div class="bar__skill--backend"></div>
-    <div class="skill--equipment">Electrical and electronic equipments</div>
-    <div class="skill--programming">C/C++, Python language</div>
-    <div class="skill--microcontroller">Microcontrollers and Microprocessors</div>
-    <div class="skill--linux">Unix/Linux</div>
-    <div class="skill--protocol">Network protocol, communication protocol</div>
-    <div class="skill--frontend">Frontend languges html, css, scss/sass,bootrap,..</div>
-    <div class="skill--backend">Backend languges  javascript, nodejs, mysql,...</div>
-  </section>
-  <section id="Wrapper__work">
-    <div class="box_about">
-      Recent work
-    </div>
-    <div class="layer--ITS"></div>
-    <div class="ITS--img"></div>
-    <div class="layer--ISE"></div>
-    <div class="ISE--img"></div>
-    <div class="layer--AQU"></div>
-    <div class="AQU--img"></div>
-    <div class="layer--ENV"></div>
-    <div class="ENV--img"></div>
-    <div class="layer--LOADCELL"></div>
-    <div class="LOADCELL--img"></div>
-  </section>
-  <section id="Wrapper__active">
-    <div class="box_about">
-      Active
-    </div>
-    <div class="layer--f367"></div>
-    <div class="f367--img"></div>
-    <div class="layer--vt"></div>
-    <div class="vt--img"></div>
-    <div class="layer--tet"></div>
-    <div class="tet--img"></div>
-    <div class="layer--chaudoc"></div>
-    <div class="chaudoc--img"></div>
-    <div class="layer--cd"></div>
-    <div class="cd--img"></div>
-  </section>
-  <section id="Wrapper__contact">
-    <div class="box_about">
-      Contact me
-    </div>
-    <div class="line--contact1"></div>
-    <div class="line--contact2"></div>
-    <div class="box--content__contact"></div>
-    <div class="address_icon"></div>
-    <div class="gmail_icon"></div>
-    <div class="phone_icon"></div>
-    <div class="box-address">21 Lãnh Binh Thăng, P12, Q11, Hồ Chí Minh city, Việt Nam</div>
-    <div class="box-gmail">tatsieuthanh888@gmail.com</div>
-    <div class="box-phone">+84 985976xxx</div>
-    <div class="bar--icon__contact"></div>
-    <div class="icon--github"></div>
-    <div class="icon--skype"></div>
-    <div class="icon--facebook"></div>
-    <div class="icon--viber"></div>
-    <div class="icon--linkedin"></div>
-  </section>
-  <script src="https://kit.fontawesome.com/0ad54b3611.js" crossorigin="anonymous"></script>
-  <script src="./js/myPortfolio.js"></script>
-</body>
-
-</html>
-
+  <body>
+    <section id="Wrapper__home">
+      <div class="text--fullname">Tất Siêu Thành</div>
+      <div class="img-home"></div>
+      <ul>
+        <li>
+          <a href="#Wrapper__home">
+            <div class="text">Home</div>
+          </a>
+        </li>
+        <li>
+          <a href="#Wrapper__about">
+            <div class="text">About</div>
+          </a>
+        </li>
+        <li>
+          <a href="#Wrapper__work">
+            <div class="text">Work</div>
+          </a>
+        </li>
+        <li>
+          <a href="#Wrapper__active">
+            <div class="text">Active</div>
+          </a>
+        </li>
+        <li>
+          <a href="#Wrapper__contact">
+            <div class="text">Contact</div>
+          </a>
+        </li>
+      </ul>
+      <div class="text--name">I'm</div>
+      <div class="line--name">_____________</div>
+      <div class="box__content--intro">
+        I'm an IoT developer with two years of experience. I'm always looking
+        for and eager to learn from real projects. For me technology is the
+        future.
+      </div>
+      <div class="box--service">My service</div>
+      <div class="box__content--service">
+        R&D solutions for iot projects, programming firmware for hardware
+        devices, designing and drawing electrical circuits, writing Web
+        servers,...
+      </div>
+      <a href="#Skype">
+        <div class="skype"></div>
+      </a>
+      <a href="#Facebook">
+        <div class="facebook"></div>
+      </a>
+      <a href="#Github">
+        <div class="github"></div>
+      </a>
+      <a href="#Viber">
+        <div class="viber"></div>
+      </a>
+      <a href="#Linkedin">
+        <div class="linkedin"></div>
+      </a>
+    </section>
+    <section id="Wrapper__about">
+      <div class="box_about">About me</div>
+      <div class="layer__abour--img">
+        <!-- <div> -->
+        <img
+          src="E:/NesTech/BaiTap/assets/TATSIEUTHANH.jpg"
+          class="about--img"
+        />
+      </div>
+      <div class="box__content--about">
+        <h2>Name: Tất Siêu Thành</h2>
+        <h2>Birthday: 20/05/1998</h2>
+        <h2>
+          Bachelor of engineering : Electronics and communication engineering
+          technology
+        </h2>
+        <h2>Experience: 2 Years</h2>
+      </div>
+      <div class="box__skill">My skills</div>
+      <div class="bar__skill--equipments"></div>
+      <div class="bar__skill--equipment"></div>
+      <div class="bar__skill--programmings"></div>
+      <div class="bar__skill--programming"></div>
+      <div class="bar__skill--Microcontrollers"></div>
+      <div class="bar__skill--Microcontroller"></div>
+      <div class="bar__skill--linuxs"></div>
+      <div class="bar__skill--linux"></div>
+      <div class="bar__skill--protocols"></div>
+      <div class="bar__skill--protocol"></div>
+      <div class="bar__skill--frontends"></div>
+      <div class="bar__skill--frontend"></div>
+      <div class="bar__skill--backends"></div>
+      <div class="bar__skill--backend"></div>
+      <div class="skill--equipment">Electrical and electronic equipments</div>
+      <div class="skill--programming">C/C++, Python language</div>
+      <div class="skill--microcontroller">
+        Microcontrollers and Microprocessors
+      </div>
+      <div class="skill--linux">Unix/Linux</div>
+      <div class="skill--protocol">
+        Network protocol, communication protocol
+      </div>
+      <div class="skill--frontend">
+        Frontend languges html, css, scss/sass,bootrap,..
+      </div>
+      <div class="skill--backend">
+        Backend languges javascript, nodejs, mysql,...
+      </div>
+    </section>
+    <section id="Wrapper__work">
+      <div class="box_about">Recent work</div>
+      <div class="layer--ITS"></div>
+      <div class="ITS--img"></div>
+      <div class="layer--ISE"></div>
+      <div class="ISE--img"></div>
+      <div class="layer--AQU"></div>
+      <div class="AQU--img"></div>
+      <div class="layer--ENV"></div>
+      <div class="ENV--img"></div>
+      <div class="layer--LOADCELL"></div>
+      <div class="LOADCELL--img"></div>
+    </section>
+    <section id="Wrapper__active">
+      <div class="box_about">Active</div>
+      <div class="layer--f367"></div>
+      <div class="f367--img"></div>
+      <div class="layer--vt"></div>
+      <div class="vt--img"></div>
+      <div class="layer--tet"></div>
+      <div class="tet--img"></div>
+      <div class="layer--chaudoc"></div>
+      <div class="chaudoc--img"></div>
+      <div class="layer--cd"></div>
+      <div class="cd--img"></div>
+    </section>
+    <section id="Wrapper__contact">
+      <div class="box_about">Contact me</div>
+      <div class="line--contact1"></div>
+      <div class="line--contact2"></div>
+      <div class="box--content__contact"></div>
+      <div class="address_icon"></div>
+      <div class="gmail_icon"></div>
+      <div class="phone_icon"></div>
+      <div class="box-address">
+        21 Lãnh Binh Thăng, P12, Q11, Hồ Chí Minh city, Việt Nam
+      </div>
+      <div class="box-gmail">tatsieuthanh888@gmail.com</div>
+      <div class="box-phone">+84 985976xxx</div>
+      <div class="bar--icon__contact"></div>
+      <div class="icon--github"></div>
+      <div class="icon--skype"></div>
+      <div class="icon--facebook"></div>
+      <div class="icon--viber"></div>
+      <div class="icon--linkedin"></div>
+    </section>
+    <script
+      src="https://kit.fontawesome.com/0ad54b3611.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/myPortfolio.js"></script>
     <script
       src="https://kit.fontawesome.com/0ad54b3611.js"
       crossorigin="anonymous"
