NamNH - update code img tag

--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -90,11 +90,7 @@
     <section id="Wrapper__about">
       <div class="box_about">About me</div>
       <div class="layer__abour--img">
-        <!-- <div> -->
-        <img
-          src="E:/NesTech/BaiTap/assets/TATSIEUTHANH.jpg"
-          class="about--img"
-        />
+        <img src="./assets/TATSIEUTHANH.jpg" class="about--img" />
       </div>
       <div class="box__content--about">
         <h2>Name: Tất Siêu Thành</h2>
