--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -114,6 +115,15 @@
 
       <div class="portfolio-container">
         <div class="portfolio-box">
+          <img src="./assets/images/Portfolio.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
           <img src="./assets/images/Portfolio1.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
@@ -157,15 +167,6 @@
             <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
-
-        <div class="portfolio-box">
-          <img src="./assets/images/Portfolio6.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
       </div>
     </section>
 
@@ -179,7 +180,7 @@
           <input type="email" placeholder="Email Address" />
         </div>
         <div class="input-box">
-          <input type="number" placeholder="Mobile Number" />
+          <input type="text" placeholder="Mobile Number" />
           <input type="text" placeholder="Email Subject" />
         </div>
         <textarea
