--- a/index.html
+++ b/index.html
@@ -89,21 +89,45 @@
         <div class="services-box">
           <i class="bx bx-code-alt"></i>
           <h3>Web Development</h3>
-          <p>Html, CSS, Javascript .</p>
+          <ol>
+            <li>HTML, CSS, JavaScript</li>
+            <li>Frameworks and libraries</li>
+            <li>Databases</li>
+            <li>Backend development</li>
+            <li>DevOps</li>
+            <li>UX/UI Design</li>
+            <li>SEO</li>
+          </ol>
           <a href="#" class="btn">Read More</a>
         </div>
 
         <div class="services-box">
           <i class="bx bx-paint"></i>
           <h3>Graphic Design</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <ol>
+            <li>Graphic design basics</li>
+            <li>Graphic design software</li>
+            <li>Graphics and image processing skills</li>
+            <li>Knowledge of marketing</li>
+            <li>User experience (UX) knowledge</li>
+            <li>Creative thinking and project implementation</li>
+            <li>The spirit of research and learning</li>
+          </ol>
           <a href="#" class="btn">Read More</a>
         </div>
 
         <div class="services-box">
           <i class="bx bxs-game"></i>
           <h3>Game Development</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <ol>
+            <li>Programming knowledge</li>
+            <li>Game design</li>
+            <li>Game graphics</li>
+            <li>Database</li>
+            <li>Cross-platform skills</li>
+            <li>Maths knowledge</li>
+            <li>Skills in data analysis and statistics</li>
+          </ol>
           <a href="#" class="btn">Read More</a>
         </div>
       </div>
