--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <title>My Portfolio</title>
 </head>
 
@@ -17,13 +18,24 @@
         <div class="navbar">
             <div class="navbar__main"><a class="navbar__main--link" href="#">HOME</a></div>
             <div class="navbar__main"><a class="navbar__main--link" href="#">ABOUT</a></div>
-            <div class="navbar__main"><a class="navbar__main--link" href="#">PRODUCT</a>
+            <div class="navbar__main"><a class="navbar__main--link" href="#">PRODUCTS</a>
                 <ul class="navbar__branch">
                     <li><a class="navbar__branch--link" href="#">URUS</a></li>
-                    <li><a class="navbar__branch--link" href="#">HURACÁN</a></li>
+                    <li><a class="navbar__branch--link" href="#">CAYENNE</a></li>
+                    <li><a class="navbar__branch--link" href="#">SORENTO</a></li>
                 </ul>
             </div>
-            <div class="navbar__main"><a class="navbar__main--link" href="#">CONTACT</a></div>
+            <div class="navbar__main"><a class="navbar__main--link" href="#">CONTACT</a>
+                <ul class="navbar__branch">
+                    <li><a class="navbar__branch--link" href="#">SHOWROOMS</a></li>
+                    <li><a class="navbar__branch--link" href="#">INFO</a></li>
+                    <li>
+                        <a class="media__facebook--link" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a class="media__youtube--link" href="#"><i class="fa-brands fa-youtube"></i></a>
+                        <a class="media__tiktok--link" href="#"><i class="fa-brands fa-tiktok"></i></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
 
@@ -46,7 +58,7 @@
             <img src="./assets 2/home__img--right.png" />
         </div>
     </section>
-
+    
 </body>
 
 </html>
