--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -10,161 +10,190 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@1&family=Roboto+Mono:wght@100&display=swap"
-    rel="stylesheet">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,400;1,500&family=Roboto+Mono:wght@100&display=swap"
-    rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,400;1,500&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/brittany-signature" rel="stylesheet">
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./css/myPortfolio.css" />
 
 </head>
 
 <body>
   <section id="Wrapper__home">
-    <div class="text--fullname">Tất Siêu Thành</div>
-    <div class="img-home"></div>
-    <ul>
-      <li><a href="#Wrapper__home">
-          <div class="text">Home</div>
-        </a></li>
-      <li><a href="#Wrapper__about">
-          <div class="text">About</div>
-        </a></li>
-      <li><a href="#Wrapper__work">
-          <div class="text">Work</div>
-        </a></li>
-      <li><a href="#Wrapper__active">
-          <div class="text">Active</div>
-        </a></li>
-      <li><a href="#Wrapper__contact">
-          <div class="text">Contact</div>
-        </a></li>
-    </ul>
-    <div class="text--name">I'm</div>
-    <div class="line--name">_____________</div>
-    <div class="box__content--intro">I'm an IoT developer with two years of experience.
-      I'm always looking for and eager to learn from real projects. For me technology is the future.</div>
-    <div class="box--service">My service</div>
-    <div class="box__content--service">
-      R&D solutions for iot projects, programming firmware for hardware devices, designing and drawing electrical
-      circuits, writing Web servers,...
+    <div class="header">
+      <div class="LOGO"></div>
+      <div class="nav_bar">
+        <li><a href="#Wrapper__home">HOME</a></li>
+        <li><a href="#Wrapper__about">ABOUT</a></li>
+        <li><a href="#Wrapper__work">WORK</a></li>
+        <li><a href="#Wrapper__active">ACTIVE</a></li>
+        <li><a href="#Wrapper__contact">CONTACT</a></li>
+      </div>
     </div>
-    <a href="#Skype">
-      <div class="skype"></div>
-    </a>
-    <a href="#Facebook">
-      <div class="facebook"></div>
-    </a>
-    <a href="#Github">
-      <div class="github"></div>
-    </a>
-    <a href="#Viber">
-      <div class="viber"></div>
-    </a>
-    <a href="#Linkedin">
-      <div class="linkedin"></div>
-    </a>
+    <div class="layer_img"> </div>
+    <div class="home_img" alter="Tất Siêu Thành"></div>
+    <div class="name">Tat Sieu Thanh</div>
+    <div class="introduce-Im">I'm</div>
+    <div class="introduce">Coder</div>
+    <div class="nav_hire">
+      <button class="Download_Cv">Download CV</button>
+      <li><a href="#1"><img src="./assets/facebook.png" alt="facebook"></a></li>
+      <li><a href="#2"><img src="./assets/linkedin.png" alt="linkein"></a></li>
+      <li><a href="#3"><img src="./assets/viber.png" alt="viber"></a></li>
+    </div>
   </section>
   <section id="Wrapper__about">
-    <div class="box_about">
-      About me
+    <div class="header">
+      <div class="LOGO"></div>
+      <div class="nav_bar">
+        <li><a href="#Wrapper__home">HOME</a></li>
+        <li><a href="#Wrapper__about">ABOUT</a></li>
+        <li><a href="#Wrapper__work">WORK</a></li>
+        <li><a href="#Wrapper__active">ACTIVE</a></li>
+        <li><a href="#Contact">CONTACT</a></li>
+      </div>
     </div>
-    <div class="layer__abour--img">
+    <div class="layer_img"> </div>
+    <div class="home_img about" alter="Tất Siêu Thành"></div>
+    <div class="about_me">Introduction About Me</div>
+    <div class="about_content">
+      <h1 id="inf_01">Name: Tất Siêu Thành</h1>
+      <h1 id="inf_02">Birthday: 20/05/1998</h1>
+      <h1 id="inf_03">Bachelor of engineering : Electronics and communication engineering technology</h1>
+      <h1 id="inf_04">Experience: 2 Years</h1>
     </div>
-        <img src="E:/NesTech/BaiTap/assets/TATSIEUTHANH.jpg" class="about--img">
+    <div class="my_skill">My skills</div>
+    <div class="my_skill-content">
+      <div class="skill_bar">
+        <div class="skill_bar-layer" id="skill_01">75%</div>
+      </div>
+      <div class="skill_bar">
+        <div class="skill_bar-layer" id="skill_02">80%</div>
+      </div>
+      <div class="skill_bar">
+        <div class="skill_bar-layer" id="skill_03">70%</div>
+      </div>
+      <div class="skill_bar">
+        <div class="skill_bar-layer" id="skill_04">70%</div>
+      </div>
+      <div class="skill_bar">
+        <div class="skill_bar-layer" id="skill_05">65%</div>
+      </div>
     </div>
-    <div class="box__content--about">
-      <h2>Name: Tất Siêu Thành</h2>
-      <h2>Birthday: 20/05/1998</h2>
-      <h2> Bachelor of engineering : Electronics and communication engineering technology</h2>
-      <h2>Experience: 2 Years</h2> 
+    <div class="my_skill-content" id="skill-content">
+      <div class="skill_item" id="skill_11">C/C++, Python language</div>
+      <div class="skill_item" id="skill_12">Unix/Linux</div>
+      <div class="skill_item" id="skill_13">Microcontrollers,Microprocessors</div>
+      <div class="skill_item" id="skill_14">HTML, css, scss/sass,bootrap,..</div>
+      <div class="skill_item" id="skill_15">javascript, nodejs, mysql,...</div>
     </div>
-    <div class="box__skill">My skills</div>
-    <div class="bar__skill--equipments"></div>
-    <div class="bar__skill--equipment"></div>
-    <div class="bar__skill--programmings"></div>
-    <div class="bar__skill--programming"></div>
-    <div class="bar__skill--Microcontrollers"></div>
-    <div class="bar__skill--Microcontroller"></div>
-    <div class="bar__skill--linuxs"></div>
-    <div class="bar__skill--linux"></div>
-    <div class="bar__skill--protocols"></div>
-    <div class="bar__skill--protocol"></div>
-    <div class="bar__skill--frontends"></div>
-    <div class="bar__skill--frontend"></div>
-    <div class="bar__skill--backends"></div>
-    <div class="bar__skill--backend"></div>
-    <div class="skill--equipment">Electrical and electronic equipments</div>
-    <div class="skill--programming">C/C++, Python language</div>
-    <div class="skill--microcontroller">Microcontrollers and Microprocessors</div>
-    <div class="skill--linux">Unix/Linux</div>
-    <div class="skill--protocol">Network protocol, communication protocol</div>
-    <div class="skill--frontend">Frontend languges html, css, scss/sass,bootrap,..</div>
-    <div class="skill--backend">Backend languges  javascript, nodejs, mysql,...</div>
   </section>
   <section id="Wrapper__work">
-    <div class="box_about">
-      Recent work
-    </div>
-    <div class="layer--ITS"></div>
-    <div class="ITS--img"></div>
-    <div class="layer--ISE"></div>
-    <div class="ISE--img"></div>
-    <div class="layer--AQU"></div>
-    <div class="AQU--img"></div>
-    <div class="layer--ENV"></div>
-    <div class="ENV--img"></div>
-    <div class="layer--LOADCELL"></div>
-    <div class="LOADCELL--img"></div>
+    <div class="header">
+      <div class="LOGO"></div>
+      <div class="nav_bar">
+        <li><a href="#Wrapper__home">HOME</a></li>
+        <li><a href="#Wrapper__about">ABOUT</a></li>
+        <li><a href="#Wrapper__work">WORK</a></li>
+        <li><a href="#Wrapper__active">ACTIVE</a></li>
+        <li><a href="#Wrapper__contact">CONTACT</a></li>
+      </div>
+      <div class="about_me" id="work">Introduction About My Works</div>
+      <div class="layer_img" id="layer_img-01"> </div>
+      <div class="home_img about" alter="Tất Siêu Thành" id="home_img-01"></div>
+      <div class="layer_img" id="layer_img-02"> </div>
+      <div class="home_img about" alter="Tất Siêu Thành" id="home_img-02"></div>
+      <div class="layer_img" id="layer_img-03"> </div>
+      <div class="home_img about" alter="Tất Siêu Thành" id="home_img-03"></div>
   </section>
   <section id="Wrapper__active">
-    <div class="box_about">
-      Active
+    <div class="header">
+      <div class="LOGO"></div>
+      <div class="nav_bar">
+        <li><a href="#Wrapper__home">HOME</a></li>
+        <li><a href="#Wrapper__about">ABOUT</a></li>
+        <li><a href="#Wrapper__work">WORK</a></li>
+        <li><a href="#Wrapper__active">ACTIVE</a></li>
+        <li><a href="#Wrapper__contact">CONTACT</a></li>
+      </div>
     </div>
-    <div class="layer--f367"></div>
-    <div class="f367--img"></div>
-    <div class="layer--vt"></div>
-    <div class="vt--img"></div>
-    <div class="layer--tet"></div>
-    <div class="tet--img"></div>
-    <div class="layer--chaudoc"></div>
-    <div class="chaudoc--img"></div>
-    <div class="layer--cd"></div>
-    <div class="cd--img"></div>
+    <div class="about_me" id="active">My Life</div>
+    <div class="layer_img" id="layer_img-21"> </div>
+    <div class="home_img about" alter="Tất Siêu Thành" id="home_img-21"></div>
+    <div class="layer_img" id="layer_img-22"> </div>
+    <div class="home_img about" alter="Tất Siêu Thành" id="home_img-22"></div>
+    <div class="layer_img" id="layer_img-23"> </div>
+    <div class="home_img about" alter="Tất Siêu Thành" id="home_img-23"></div>
   </section>
   <section id="Wrapper__contact">
-    <div class="box_about">
-      Contact me
+    <div class="header">
+      <div class="LOGO"></div>
+      <div class="nav_bar">
+        <li><a href="#Wrapper__home">HOME</a></li>
+        <li><a href="#Wrapper__about">ABOUT</a></li>
+        <li><a href="#Wrapper__work">WORK</a></li>
+        <li><a href="#Wrapper__active">ACTIVE</a></li>
+        <li><a href="#Wrapper__contact">CONTACT</a></li>
+      </div>
     </div>
-    <div class="line--contact1"></div>
-    <div class="line--contact2"></div>
-    <div class="box--content__contact"></div>
-    <div class="address_icon"></div>
-    <div class="gmail_icon"></div>
-    <div class="phone_icon"></div>
-    <div class="box-address">21 Lãnh Binh Thăng, P12, Q11, Hồ Chí Minh city, Việt Nam</div>
-    <div class="box-gmail">tatsieuthanh888@gmail.com</div>
-    <div class="box-phone">+84 985976xxx</div>
-    <div class="bar--icon__contact"></div>
-    <div class="icon--github"></div>
-    <div class="icon--skype"></div>
-    <div class="icon--facebook"></div>
-    <div class="icon--viber"></div>
-    <div class="icon--linkedin"></div>
+    <div class="flex__contact">
+      <input type="text" id="fname" class="form" value="Your Name">
+      <input type="text" id="fname" class="form" value="Your E-mail">
+      <input type="text" id="fname" class="form" value="Subject">
+      <input type="text" id="fname" class="form__sub" value="Your Message ...">
+      <button class="submit">SUBMIT</button>
+    </div>
   </section>
-  <script src="https://kit.fontawesome.com/0ad54b3611.js" crossorigin="anonymous"></script>
-  <script src="./js/myPortfolio.js"></script>
+  <div class="container my-5">
+
+    <footer class="bg-light1 text-center text-white">
+      <!-- Grid container -->
+      <div class="container p-4 pb-0">
+        <!-- Section: Social media -->
+        <section class="mb-4">
+          <!-- Facebook -->
+          <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998;" href="#!" role="button"><i
+              class="fab fa-facebook-f"></i></a>
+
+          <!-- Twitter -->
+          <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee;" href="#!" role="button"><i
+              class="fab fa-twitter"></i></a>
+
+          <!-- Google -->
+          <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39;" href="#!" role="button"><i
+              class="fab fa-google"></i></a>
+
+          <!-- Instagram -->
+          <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac;" href="#!" role="button"><i
+              class="fab fa-instagram"></i></a>
+
+          <!-- Linkedin -->
+          <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca;" href="#!" role="button"><i
+              class="fab fa-linkedin-in"></i></a>
+          <!-- Github -->
+          <a class="btn btn-primary btn-floating m-1" style="background-color: #333333;" href="#!" role="button"><i
+              class="fab fa-github"></i></a>
+        </section>
+        <!-- Section: Social media -->
+      </div>
+      <!-- Grid container -->
+
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2020 Copyright:
+        <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+
+  </div>
 </body>
 
 </html>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://kit.fontawesome.com/0ad54b3611.js" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
+<script src="https://unpkg.com/scrollreveal"></script>
+<script src="./js/myPortfolio.js"></script>
+</body>
 
-    <script
-      src="https://kit.fontawesome.com/0ad54b3611.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./js/myPortfolio.js"></script>
-  </body>
 </html>
