--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <section id="header">
-        <div>
-            <img src="./assets 2/header.png" />
+        <div class="header__img">
+            <img src="./assets 2/header__img.png" />
         </div>
         <div class="navbar">
             <div class="navbar__main"><a class="navbar__main--link" href="#">HOME</a></div>
@@ -59,6 +59,14 @@
         </div>
     </section>
     
+    <section id="footer">
+        <div class="footer__img">
+            <img src="./assets 2/footer__img.png" />
+        </div>
+
+
+    </section>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
