--- a/test.html
+++ b/test.html
@@ -6,12 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/test.css" />
-    <title>test</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <title>My Portfolio</title>
 </head>
 
 <body>
-    <div>abc</div>
-    <script src="./js/test.js"></script>
+    <header>
+        <div class="nav-area">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">services</a>
+                    <ul>
+                        <li><a href="#">web design</a></li>
+                        <li><a href="#">graphics design</a></li>
+                        <li><a href="#">wordpress</a></li>
+                        <li><a href="#">digital marketing</a></li>
+                        <li><a href="#">content </a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </header>
 </body>
 
 </html>
