--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <li class="navbar__main--list"><a class="navbar__main--link" href="#">CONTACT</a>
                 <ul class="navbar__branch">
                     <li class="navbar__branch--list"><a class="navbar__branch--link" href="#">SHOWROOMS</a></li>
-                    <li class="navbar__branch--list"><a class="navbar__branch--link" href="#">INFO</a></li>
+                    <li class="navbar__branch--list"><a class="navbar__branch--link" href="#footer">INFO</a></li>
                     <li>
-                        <a class="media__facebook--link" href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a class="media__youtube--link" href="#"><i class="fa-brands fa-youtube"></i></a>
-                        <a class="media__tiktok--link" href="#"><i class="fa-brands fa-tiktok"></i></a>
+                        <a class="navbar__media--link" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a class="navbar__media--link" href="#"><i class="fa-brands fa-youtube"></i></a>
+                        <a class="navbar__media--link" href="#"><i class="fa-brands fa-tiktok"></i></a>
                     </li>
                 </ul>
             </li>
