--- a/html/homework.html
+++ b/html/homework.html
@@ -1,36 +1,77 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
-</head>
-<body>
-<script type="text/javascript">
-	// bài 1
-	var string = "javascript";
-          console.log(string.replace("javascript", "ReactJS"));
-// bài 2
- var name="Phan Thanh Dĩ     " ;
-var fristName = name.slice(0,4); 
-console.log(name.trim()+","+fristName);       
-// bài 3
-let a = [2,3,4,5,6,7,8,-10,30];
-let max_a = a.reduce(function(accumulator, element){
-  return (accumulator > element) ? accumulator : element});
-let min_a = a.reduce(function(accumulator, element){
-  return (accumulator < element) ? accumulator : element});
-console.log(a);
-console.log(" number max= ",max_a);
-console.log(" number min= ",min_a);
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title></title>
+  </head>
+  <body>
+    <script type="text/javascript">
+      /**
+ * <!--
+cho chuỗi A = ‘Học Javascript Front    End tại Nestech   ,Quận 10’
+  Bài 1
+	tìm vị trí chuỗi “Javascript”
+	thay vị trí chuỗi “Javascript” thành “ReactJS”
 
-// bài 4
-var b="Học Javascript Front End";
-var c="ở Nectech";
-console.log("length=",b.length);
-console.log(b+" "+c);
-// bài 5
+  Bài 2
+  	hiển thị chuỗi A với việc bỏ khoảng trắng
+	cắt chuỗi A tại thành dấu phẩy và hiển thị cụm sau của chuỗi sau khi cắt
+-->
 
-</script>
-</body>
+
+      /**
+ * <!--
+  Bài 3
+	cho 1 mảng A = [2,3,4,5,6,7,8,-10,30].
+	tìm số lớn nhất , số nhỏ nhất
+
+  Bài 4
+  	cho 1 chuỗi string = ‘Học Javascript Front End’.
+	_ hiển thị độ dài chuổi
+
+	_ nối chuỗi string với chuỗi B = ‘’ở Nesteh
+-->
+ */
+
+      /**
+ * <!--
+  Bài 5
+	cho 1 mảng A = [2,3,4,5,6,7,8,-10,30].
+	tìm số lớn nhất , số nhỏ nhất,tìm số nguyên tố, kiểu tra xem mảng đó có là dãy fibonannci không
+
+  Bài 6
+  	cho 1 chuỗi string = ‘Học Javascript Front End’.
+	_ hiển thị độ dài chuổi
+
+	_ nối chuỗi string với chuỗi B = ‘’ở Nesteh
+-->
+ */
+      // bài 1
+      var string = 'javascript';
+      console.log(string.replace('javascript', 'ReactJS'));
+      // bài 2
+      var name = 'Phan Thanh Dĩ     ';
+      var fristName = name.slice(0, name.indexOf(' '));
+      console.log(name.trim() + ',' + ' ' + fristName);
+      // bài 3
+      let a = [2, 3, 4, 5, 6, 7, 8, -10, 3, 1000];
+      let max_a = a.reduce(function (accumulator, element) {
+        return accumulator > element ? accumulator : element;
+      });
+      let min_a = a.reduce(function (accumulator, element) {
+        return accumulator < element ? accumulator : element;
+      });
+      console.log(a);
+      console.log('number max= ', max_a);
+      console.log('number min= ', min_a);
+
+      // bài 4
+      var b = 'Học Javascript Front End';
+      var c = 'ở Nectech';
+      console.log('length =', b.length);
+      console.log(b + ' ' + c);
+      // bài 5
+    </script>
+  </body>
 </html>
