--- a/check.html
+++ b/check.html
@@ -11,62 +11,14 @@
 </head>
 
 <body>
-    <section id="header">
-        <div class="header__img">
-            <img src="./assets 2/header__img.png" />
-        </div>
-        <ul class="navbar__main">
-            <li class="navbar__main--list"><a class="navbar__main--link" href="#">HOME</a></li>
-            <li class="navbar__main--list"><a class="navbar__main--link" href="#">ABOUT</a></li>
-            <li class="navbar__main--list"><a class="navbar__main--link" href="#">PRODUCTS</a>
-                <ul class="navbar__branch">
-                    <li class="navbar__branch--list"><a class="navbar__branch--link" href="#">URUS</a></li>
-                    <li class="navbar__branch--list"><a class="navbar__branch--link" href="#">CAYENNE</a></li>
-                    <li class="navbar__branch--list"><a class="navbar__branch--link" href="#">SORENTO</a></li>
-                </ul>
-            </li>
-            <li class="navbar__main--list"><a class="navbar__main--link" href="#">CONTACT</a>
-                <ul class="navbar__branch">
-                    <li class="navbar__branch--list"><a class="navbar__branch--link" href="#">SHOWROOMS</a></li>
-                    <li class="navbar__branch--list"><a class="navbar__branch--link" href="#">INFO</a></li>
-                    <li>
-                        <a class="media__facebook--link" href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a class="media__youtube--link" href="#"><i class="fa-brands fa-youtube"></i></a>
-                        <a class="media__tiktok--link" href="#"><i class="fa-brands fa-tiktok"></i></a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </section>
-
-    <section id="home">
-        <div class="home__img--left">
-            <img src="./assets 2/home__img--left.png" />
-        </div>
-        <div class="home__img--center">
-            <div class="home__img--top">
-                <img src="./assets 2/home__img--top.png" />
-            </div>
-            <div class="home__img--bottom">
-                <img src="./assets 2/home__img--bottom.png" />
-            </div>
-            <div class="home__paragraph">
-                LAMBORGHINI URUS
-            </div>
-        </div>
-        <div class="home__img--right">
-            <img src="./assets 2/home__img--right.png" />
-        </div>
-    </section>
-    
-    <section id="footer">
-        <div class="footer__img">
-            <img src="./assets 2/footer__img.png" />
-        </div>
-
-
-    </section>
-    <script src="./js/index.js"></script>
+    <div class="home__sub">
+        <div style="background-color: red;" class="item item1">item1</div>
+        <div style="background-color: yellow;" class="item item2">item2</div>
+        <div style="background-color: red;" class="item item3">item3</div>
+        <div style="background-color: yellow;" class="item item4">item4</div>
+        <div style="background-color: red;" class="item item5">item5</div>
+        <div style="background-color: blue;" class="item item6">item6</div>
+    </div>
 </body>
 
 </html>
