--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <title>My Portfolio</title>
 </head>
 
 <body>
     <section id="header">
-        <div class="header__img">
-            <img src="./assets 2/header__img.png" />
+        <div class="header__banner">
+            <img src="./assets/header__banner.png" />
         </div>
         <ul class="navbar__main">
-            <li class="navbar__main--list"><a class="navbar__main--link" href="#">HOME</a></li>
-            <li class="navbar__main--list"><a class="navbar__main--link" href="#">ABOUT</a></li>
-            <li class="navbar__main--list"><a class="navbar__main--link" href="#">PRODUCTS</a>
+            <li class="navbar__main--list"><a class="navbar__main--link" href="#header">HOME</a></li>
+            <li class="navbar__main--list"><a class="navbar__main--link" href="#about">ABOUT</a></li>
+            <li class="navbar__main--list"><a class="navbar__main--link" href="#">MODELS</a>
                 <ul class="navbar__branch">
                     <li class="navbar__branch--list"><a class="navbar__branch--link" href="#">URUS</a></li>
                     <li class="navbar__branch--list"><a class="navbar__branch--link" href="#">CAYENNE</a></li>
@@ -40,32 +40,37 @@
     </section>
 
     <section id="home">
-        <div class="home__img--left">
-            <img src="./assets 2/home__img--left.png" />
+        <div class="home__main">
+            <div>
+                <img class="home__main--left" src="./assets/home__main--left.png" />
+            </div>
+            <div>
+                <div>
+                    <img class="home__banner--central" src="./assets/home__banner--central.png" />
+                </div>
+                <div>
+                    <img class="home__main--bottom" src="./assets/home__main--bottom.png" />
+                </div>
+            </div>
+            <div>
+                <img class="home__main--right" src="./assets/home__main--right.png" />
+            </div>
         </div>
-        <div class="home__img--center">
-            <div class="home__img--top">
-                <img src="./assets 2/home__img--top.png" />
-            </div>
-            <div class="home__img--bottom">
-                <img src="./assets 2/home__img--bottom.png" />
-            </div>
-            <div class="home__paragraph">
-                LAMBORGHINI URUS
-            </div>
-        </div>
-        <div class="home__img--right">
-            <img src="./assets 2/home__img--right.png" />
+        <div class="home__sub">
+            <img class="home__sub--left" src="./assets/home__sub--left.png" />
+            <img class="home__banner--left" src="./assets/home__banner--left.png" />
+            <img class="home__sub--center" src="./assets/home__sub--center.png" />
+            <img class="home__banner--right" src="./assets/home__banner--right.png" />
+            <img class="home__sub--right" src="./assets/home__sub--right.png" />
+            <img class="home__sub--bottom" src="./assets/home__sub--bottom.png" />
         </div>
     </section>
-    
-    <section id="footer">
+
+    <!-- <section id="footer">
         <div class="footer__img">
-            <img src="./assets 2/footer__img.png" />
+            <img src="./assets/footer__img.png" />
         </div>
-
-
-    </section>
+    </section> -->
     <script src="./js/index.js"></script>
 </body>
 
